[project]
name = "franco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arxiv>=3.0.0",
    "huggingface-hub>=1.14.0",
    "load-dotenv>=0.1.0",
    "numpy>=2.4.4",
    "pyzotero>=1.11.1",
    "sentence-transformers>=5.5.0",
]
