[project]
name = "franco"
version = "0.1.0"
description = "A Python script that recommends recent arXiv papers based on the semantic similarity to the user's existing Zotero library. It uses Sentence Transformers to compute embeddings and filters papers by a cosine similarity threshold."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arxiv>=3.0.0",
    "huggingface-hub>=1.14.0",
    "load-dotenv>=0.1.0",
    "numpy>=2.4.4",
    "pyzotero>=1.11.1",
    "sentence-transformers>=5.5.0",
]
